# EmailTriageEnv-OpenEnv-Hackathon

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  test_env.sh  validate-submission.sh
email_triage_env/: __init__.py  client.py  models.py
email_triage_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
email_triage_env/server/: Dockerfile  __init__.py  data_generator.py  email_triage_environment.py  graders.py  requirements.txt  tasks.py
server/: app.py
